# education-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py
app/api/routers/: health.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/models/: user.py
app/repositories/: __init__.py  user.py
app/schemas/: __init__.py  health.py  user.py
app/services/: __init__.py  user.py
education_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: 7ea781a97a00_create_users_table.py
scripts/: check_password_flow.py
