[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "education-platform"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]

[tool.setuptools.packages.find]
include = ["app*"]
